--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -191,7 +191,7 @@ $breakpoints: (
 $max-width: null; // For no max-width, use $max-width: null;
 
 $size__site-sidebar: 300px; // this needs to be pixel based because of ad dimensions
-$max-width-page: 70em; // this is 1680px
+$max-width-page: 80em; // this is 1280px
 
 // site structure
 $max-width-medium: 680px;
